# papertesla-serverless

./: .gitignore  LICENSE  README.md  handler.py  package-lock.json  package.json  pyproject.toml  requirements.txt  serverless.yml
.github/workflows/: deploy.yml
papertesla/: data.py  store.py
resources/: roles.yml
resources/dynamodb/: orders.yml  pricing.yml  products.yml
resources/seed/: orders.json  products.json
