[tool.poetry]
name = "papertesla-api"
version = "0.1.0"
description = "Paper Tesla Serverless Api"
authors = ["Braden Mars <braden@arroyodev.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
boto3 = "^1.11.10"

[tool.poetry.dev-dependencies]
autoflake = "^1.3.1"
autopep8 = "^1.5"
flake8 = "^3.7.9"
rope = "^0.16.0"
mypy = "^0.761"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
